--- a/.cproject
+++ b/.cproject
@@ -11,11 +11,11 @@
                     					
                     <externalSetting>
                         						
-                        <entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/xenomat"/>
+                        <entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/macbook"/>
                         						
-                        <entry flags="VALUE_WORKSPACE_PATH" kind="libraryPath" name="/xenomat/Debug"/>
+                        <entry flags="VALUE_WORKSPACE_PATH" kind="libraryPath" name="/macbook/Debug"/>
                         						
-                        <entry flags="RESOLVED" kind="libraryFile" name="test" srcPrefixMapping="" srcRootPath=""/>
+                        <entry flags="RESOLVED" kind="libraryFile" name="macbook" srcPrefixMapping="" srcRootPath=""/>
                         					
                     </externalSetting>
                     				
@@ -41,7 +41,7 @@
             			
             <storageModule moduleId="cdtBuildSystem" version="4.0.0">
                 				
-                <configuration artifactExtension="so" artifactName="test" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.sharedLib" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.sharedLib,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug" cleanCommand="rm -rf" description="" id="cdt.managedbuild.config.macosx.so.debug.1888949587" name="Debug" parent="cdt.managedbuild.config.macosx.so.debug">
+                <configuration artifactExtension="so" artifactName="macbook" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.sharedLib" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.sharedLib,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug" cleanCommand="rm -rf" description="" id="cdt.managedbuild.config.macosx.so.debug.1888949587" name="Debug" parent="cdt.managedbuild.config.macosx.so.debug">
                     					
                     <folderInfo id="cdt.managedbuild.config.macosx.so.debug.1888949587." name="/" resourcePath="">
                         						
@@ -91,7 +91,7 @@
                                     								
                                 </inputType>
                                 								
-                                <outputType id="cdt.managedbuild.tool.macosx.cpp.linker.macosx.so.debug.output.1303605354" outputPrefix="xenomat-" superClass="cdt.managedbuild.tool.macosx.cpp.linker.macosx.so.debug.output"/>
+                                <outputType id="cdt.managedbuild.tool.macosx.cpp.linker.macosx.so.debug.output.1303605354" outputPrefix="xeno-" superClass="cdt.managedbuild.tool.macosx.cpp.linker.macosx.so.debug.output"/>
                                 							
                             </tool>
                             							
@@ -133,6 +133,8 @@
                                 								
                                 <option defaultValue="gnu.c.debugging.level.max" id="gnu.c.compiler.macosx.so.debug.option.debugging.level.802767069" name="Debug Level" superClass="gnu.c.compiler.macosx.so.debug.option.debugging.level" useByScannerDiscovery="false" valueType="enumerated"/>
                                 								
+                                <option id="gnu.c.compiler.option.dialect.std.221551067" name="Language standard" superClass="gnu.c.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.c.compiler.dialect.c11" valueType="enumerated"/>
+                                								
                                 <inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1386646708" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
                                 							
                             </tool>
@@ -165,17 +167,13 @@
                                 								
                                 <option id="gnu.cpp.compiler.macosx.so.debug.option.optimization.level.1311252482" name="Optimization Level" superClass="gnu.cpp.compiler.macosx.so.debug.option.optimization.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.optimization.level.more" valueType="enumerated"/>
                                 								
-                                <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.2021313624" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
-                                    									
-                                    <listOptionValue builtIn="false" value="../include"/>
-                                    								
-                                </option>
-                                								
                                 <inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1483091599" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
                                 							
                             </tool>
                             							
                             <tool id="cdt.managedbuild.tool.gnu.c.compiler.macosx.so.debug.1167392405" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.macosx.so.debug.1637205380">
+                                								
+                                <option id="gnu.c.compiler.option.dialect.std.803541550" name="Language standard" superClass="gnu.c.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.c.compiler.dialect.c11" valueType="enumerated"/>
                                 								
                                 <inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1147452089" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
                                 							
@@ -184,6 +182,12 @@
                         </toolChain>
                         					
                     </folderInfo>
+                    					
+                    <sourceEntries>
+                        						
+                        <entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+                        					
+                    </sourceEntries>
                     				
                 </configuration>
                 			
@@ -203,9 +207,13 @@
                         						
                         <entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/xenomat"/>
                         						
+                        <entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/macbook"/>
+                        						
                         <entry flags="VALUE_WORKSPACE_PATH" kind="libraryPath" name="/xenomat/Release"/>
                         						
-                        <entry flags="RESOLVED" kind="libraryFile" name="test" srcPrefixMapping="" srcRootPath=""/>
+                        <entry flags="VALUE_WORKSPACE_PATH" kind="libraryPath" name="/macbook/Release"/>
+                        						
+                        <entry flags="RESOLVED" kind="libraryFile" name="macbook" srcPrefixMapping="" srcRootPath=""/>
                         					
                     </externalSetting>
                     				
@@ -231,7 +239,7 @@
             			
             <storageModule moduleId="cdtBuildSystem" version="4.0.0">
                 				
-                <configuration artifactExtension="so" artifactName="test" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.sharedLib" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.sharedLib,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release" cleanCommand="rm -rf" description="" id="cdt.managedbuild.config.macosx.so.release.2023311598" name="Release" parent="cdt.managedbuild.config.macosx.so.release">
+                <configuration artifactExtension="so" artifactName="macbook" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.sharedLib" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.sharedLib,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release" cleanCommand="rm -rf" description="" id="cdt.managedbuild.config.macosx.so.release.2023311598" name="Release" parent="cdt.managedbuild.config.macosx.so.release">
                     					
                     <folderInfo id="cdt.managedbuild.config.macosx.so.release.2023311598." name="/" resourcePath="">
                         						
@@ -313,7 +321,7 @@
                                     								
                                 </option>
                                 								
-                                <option id="gnu.cpp.compiler.option.other.other.361166471" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" useByScannerDiscovery="false" value="-c -fmessage-length=0 -fexceptions -fdata-sections -ffunction-sections -fvisibility=hidden" valueType="string"/>
+                                <option id="gnu.cpp.compiler.option.other.other.361166471" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" useByScannerDiscovery="false" value="-c -fmessage-length=0" valueType="string"/>
                                 								
                                 <inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1842507958" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
                                 							
@@ -324,6 +332,8 @@
                                 <option defaultValue="gnu.c.optimization.level.most" id="gnu.c.compiler.macosx.so.release.option.optimization.level.1929844116" name="Optimization Level" superClass="gnu.c.compiler.macosx.so.release.option.optimization.level" useByScannerDiscovery="false" valueType="enumerated"/>
                                 								
                                 <option defaultValue="gnu.c.debugging.level.none" id="gnu.c.compiler.macosx.so.release.option.debugging.level.1803531948" name="Debug Level" superClass="gnu.c.compiler.macosx.so.release.option.debugging.level" useByScannerDiscovery="false" valueType="enumerated"/>
+                                								
+                                <option id="gnu.c.compiler.option.dialect.std.1931745777" name="Language standard" superClass="gnu.c.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.c.compiler.dialect.c11" valueType="enumerated"/>
                                 								
                                 <inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1580793301" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
                                 							
@@ -363,6 +373,8 @@
                             							
                             <tool id="cdt.managedbuild.tool.gnu.c.compiler.macosx.so.release.627210570" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.macosx.so.release.690937241">
                                 								
+                                <option id="gnu.c.compiler.option.dialect.std.666521910" name="Language standard" superClass="gnu.c.compiler.option.dialect.std" value="gnu.c.compiler.dialect.c11" valueType="enumerated"/>
+                                								
                                 <inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.769021821" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
                                 							
                             </tool>
@@ -393,36 +405,6 @@
         	
     </storageModule>
     	
-    <storageModule moduleId="scannerConfiguration">
-        		
-        <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
-        		
-        <scannerConfigBuildInfo instanceId="cdt.managedbuild.config.macosx.so.debug.1888949587;cdt.managedbuild.config.macosx.so.debug.1888949587.;cdt.managedbuild.tool.gnu.cpp.compiler.macosx.so.debug.1620817831;cdt.managedbuild.tool.gnu.cpp.compiler.input.1421205198">
-            			
-            <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
-            		
-        </scannerConfigBuildInfo>
-        		
-        <scannerConfigBuildInfo instanceId="cdt.managedbuild.config.macosx.so.release.2023311598;cdt.managedbuild.config.macosx.so.release.2023311598.;cdt.managedbuild.tool.gnu.cpp.compiler.macosx.so.release.1492014224;cdt.managedbuild.tool.gnu.cpp.compiler.input.1842507958">
-            			
-            <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
-            		
-        </scannerConfigBuildInfo>
-        		
-        <scannerConfigBuildInfo instanceId="cdt.managedbuild.config.macosx.so.debug.1888949587;cdt.managedbuild.config.macosx.so.debug.1888949587.;cdt.managedbuild.tool.gnu.c.compiler.macosx.so.debug.1637205380;cdt.managedbuild.tool.gnu.c.compiler.input.1386646708">
-            			
-            <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
-            		
-        </scannerConfigBuildInfo>
-        		
-        <scannerConfigBuildInfo instanceId="cdt.managedbuild.config.macosx.so.release.2023311598;cdt.managedbuild.config.macosx.so.release.2023311598.;cdt.managedbuild.tool.gnu.c.compiler.macosx.so.release.690937241;cdt.managedbuild.tool.gnu.c.compiler.input.1580793301">
-            			
-            <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
-            		
-        </scannerConfigBuildInfo>
-        	
-    </storageModule>
-    	
     <storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
     	
     <storageModule moduleId="refreshScope" versionNumber="2">
@@ -446,6 +428,36 @@
     <storageModule moduleId="org.eclipse.cdt.make.core.buildtargets">
         		
         <buildTargets/>
+        	
+    </storageModule>
+    	
+    <storageModule moduleId="scannerConfiguration">
+        		
+        <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+        		
+        <scannerConfigBuildInfo instanceId="cdt.managedbuild.config.macosx.so.release.2023311598;cdt.managedbuild.config.macosx.so.release.2023311598.;cdt.managedbuild.tool.gnu.c.compiler.macosx.so.release.690937241;cdt.managedbuild.tool.gnu.c.compiler.input.1580793301">
+            			
+            <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+            		
+        </scannerConfigBuildInfo>
+        		
+        <scannerConfigBuildInfo instanceId="cdt.managedbuild.config.macosx.so.debug.1888949587;cdt.managedbuild.config.macosx.so.debug.1888949587.;cdt.managedbuild.tool.gnu.cpp.compiler.macosx.so.debug.1620817831;cdt.managedbuild.tool.gnu.cpp.compiler.input.1421205198">
+            			
+            <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+            		
+        </scannerConfigBuildInfo>
+        		
+        <scannerConfigBuildInfo instanceId="cdt.managedbuild.config.macosx.so.release.2023311598;cdt.managedbuild.config.macosx.so.release.2023311598.;cdt.managedbuild.tool.gnu.cpp.compiler.macosx.so.release.1492014224;cdt.managedbuild.tool.gnu.cpp.compiler.input.1842507958">
+            			
+            <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+            		
+        </scannerConfigBuildInfo>
+        		
+        <scannerConfigBuildInfo instanceId="cdt.managedbuild.config.macosx.so.debug.1888949587;cdt.managedbuild.config.macosx.so.debug.1888949587.;cdt.managedbuild.tool.gnu.c.compiler.macosx.so.debug.1637205380;cdt.managedbuild.tool.gnu.c.compiler.input.1386646708">
+            			
+            <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+            		
+        </scannerConfigBuildInfo>
         	
     </storageModule>
     
