--- a/.cproject
+++ b/.cproject
@@ -13,9 +13,13 @@
                         						
                         <entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/macbook"/>
                         						
+                        <entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/xenomat"/>
+                        						
                         <entry flags="VALUE_WORKSPACE_PATH" kind="libraryPath" name="/macbook/Debug"/>
                         						
-                        <entry flags="RESOLVED" kind="libraryFile" name="macbook" srcPrefixMapping="" srcRootPath=""/>
+                        <entry flags="VALUE_WORKSPACE_PATH" kind="libraryPath" name="/xenomat/Debug"/>
+                        						
+                        <entry flags="RESOLVED" kind="libraryFile" name="examples" srcPrefixMapping="" srcRootPath=""/>
                         					
                     </externalSetting>
                     				
@@ -41,7 +45,7 @@
             			
             <storageModule moduleId="cdtBuildSystem" version="4.0.0">
                 				
-                <configuration artifactExtension="so" artifactName="macbook" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.sharedLib" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.sharedLib,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug" cleanCommand="rm -rf" description="" id="cdt.managedbuild.config.macosx.so.debug.1888949587" name="Debug" parent="cdt.managedbuild.config.macosx.so.debug">
+                <configuration artifactExtension="so" artifactName="examples" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.sharedLib" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.sharedLib,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug" cleanCommand="rm -rf" description="" id="cdt.managedbuild.config.macosx.so.debug.1888949587" name="Debug" parent="cdt.managedbuild.config.macosx.so.debug">
                     					
                     <folderInfo id="cdt.managedbuild.config.macosx.so.debug.1888949587." name="/" resourcePath="">
                         						
@@ -49,7 +53,7 @@
                             							
                             <targetPlatform id="cdt.managedbuild.target.gnu.platform.macosx.so.debug.1342140940" name="Debug Platform" superClass="cdt.managedbuild.target.gnu.platform.macosx.so.debug"/>
                             							
-                            <builder buildPath="${workspace_loc:/xenomat}/Debug" command="make" enableCleanBuild="true" id="cdt.managedbuild.target.gnu.builder.macosx.so.debug.1912505262" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="Gnu Make Builder" parallelBuildOn="true" parallelizationNumber="optimal" superClass="cdt.managedbuild.target.gnu.builder.macosx.so.debug"/>
+                            <builder buildPath="${workspace_loc:/xenomat}/Debug" enableCleanBuild="true" id="cdt.managedbuild.target.gnu.builder.macosx.so.debug.1912505262" keepEnvironmentInBuildfile="true" managedBuildOn="true" name="Gnu Make Builder" parallelBuildOn="true" parallelizationNumber="optimal" superClass="cdt.managedbuild.target.gnu.builder.macosx.so.debug"/>
                             							
                             <tool id="cdt.managedbuild.tool.macosx.c.linker.macosx.so.debug.124454251" name="MacOS X C Linker" superClass="cdt.managedbuild.tool.macosx.c.linker.macosx.so.debug">
                                 								
@@ -81,7 +85,9 @@
                                     								
                                 </option>
                                 								
-                                <option id="macosx.cpp.link.option.flags.1936858044" name="Linker flags" superClass="macosx.cpp.link.option.flags" useByScannerDiscovery="false" value="-undefined dynamic_lookup" valueType="string"/>
+                                <option id="macosx.cpp.link.option.flags.1936858044" name="Linker flags" superClass="macosx.cpp.link.option.flags" useByScannerDiscovery="false" value="-Wl,-dead_strip,-x,-S,-why_load -undefined dynamic_lookup" valueType="string"/>
+                                								
+                                <option id="macosx.cpp.link.option.strip.383274195" superClass="macosx.cpp.link.option.strip" value="false" valueType="boolean"/>
                                 								
                                 <inputType id="cdt.managedbuild.tool.macosx.cpp.linker.input.1696561658" superClass="cdt.managedbuild.tool.macosx.cpp.linker.input">
                                     									
@@ -96,6 +102,8 @@
                             </tool>
                             							
                             <tool id="cdt.managedbuild.tool.gnu.assembler.macosx.so.debug.1260997548" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.macosx.so.debug">
+                                								
+                                <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="true" id="gnu.both.asm.option.include.paths.1715315857" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath"/>
                                 								
                                 <inputType id="cdt.managedbuild.tool.gnu.assembler.input.998587046" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
                                 							
@@ -123,6 +131,10 @@
                                     								
                                 </option>
                                 								
+                                <option id="gnu.cpp.compiler.option.other.other.1787394188" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" useByScannerDiscovery="false" value="-c -ffunction-sections -fdata-sections -fvisibility=hidden -fmessage-length=0" valueType="string"/>
+                                								
+                                <option id="gnu.cpp.compiler.option.other.pic.1539235892" name="Position Independent Code (-fPIC)" superClass="gnu.cpp.compiler.option.other.pic" useByScannerDiscovery="false" value="true" valueType="boolean"/>
+                                								
                                 <inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1421205198" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
                                 							
                             </tool>
@@ -134,6 +146,8 @@
                                 <option defaultValue="gnu.c.debugging.level.max" id="gnu.c.compiler.macosx.so.debug.option.debugging.level.802767069" name="Debug Level" superClass="gnu.c.compiler.macosx.so.debug.option.debugging.level" useByScannerDiscovery="false" valueType="enumerated"/>
                                 								
                                 <option id="gnu.c.compiler.option.dialect.std.221551067" name="Language standard" superClass="gnu.c.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.c.compiler.dialect.c11" valueType="enumerated"/>
+                                								
+                                <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="true" id="gnu.c.compiler.option.include.paths.1795570607" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath"/>
                                 								
                                 <inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1386646708" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
                                 							
@@ -213,7 +227,7 @@
                         						
                         <entry flags="VALUE_WORKSPACE_PATH" kind="libraryPath" name="/macbook/Release"/>
                         						
-                        <entry flags="RESOLVED" kind="libraryFile" name="macbook" srcPrefixMapping="" srcRootPath=""/>
+                        <entry flags="RESOLVED" kind="libraryFile" name="examples" srcPrefixMapping="" srcRootPath=""/>
                         					
                     </externalSetting>
                     				
@@ -239,7 +253,7 @@
             			
             <storageModule moduleId="cdtBuildSystem" version="4.0.0">
                 				
-                <configuration artifactExtension="so" artifactName="macbook" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.sharedLib" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.sharedLib,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release" cleanCommand="rm -rf" description="" id="cdt.managedbuild.config.macosx.so.release.2023311598" name="Release" parent="cdt.managedbuild.config.macosx.so.release">
+                <configuration artifactExtension="so" artifactName="examples" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.sharedLib" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.sharedLib,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release" cleanCommand="rm -rf" description="" id="cdt.managedbuild.config.macosx.so.release.2023311598" name="Release" parent="cdt.managedbuild.config.macosx.so.release">
                     					
                     <folderInfo id="cdt.managedbuild.config.macosx.so.release.2023311598." name="/" resourcePath="">
                         						
@@ -247,7 +261,7 @@
                             							
                             <targetPlatform id="cdt.managedbuild.target.gnu.platform.macosx.so.release.451799548" name="Debug Platform" superClass="cdt.managedbuild.target.gnu.platform.macosx.so.release"/>
                             							
-                            <builder buildPath="${workspace_loc:/xenomat}/Release" id="cdt.managedbuild.target.gnu.builder.macosx.so.release.940891564" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="Gnu Make Builder" superClass="cdt.managedbuild.target.gnu.builder.macosx.so.release"/>
+                            <builder buildPath="${workspace_loc:/xenomat}/Release" id="cdt.managedbuild.target.gnu.builder.macosx.so.release.940891564" keepEnvironmentInBuildfile="true" managedBuildOn="true" name="Gnu Make Builder" parallelBuildOn="true" parallelizationNumber="optimal" superClass="cdt.managedbuild.target.gnu.builder.macosx.so.release"/>
                             							
                             <tool id="cdt.managedbuild.tool.macosx.c.linker.macosx.so.release.926591297" name="MacOS X C Linker" superClass="cdt.managedbuild.tool.macosx.c.linker.macosx.so.release">
                                 								
@@ -277,7 +291,9 @@
                                     								
                                 </option>
                                 								
-                                <option id="macosx.cpp.link.option.flags.483277187" name="Linker flags" superClass="macosx.cpp.link.option.flags" useByScannerDiscovery="false" value="-undefined dynamic_lookup" valueType="string"/>
+                                <option id="macosx.cpp.link.option.flags.483277187" name="Linker flags" superClass="macosx.cpp.link.option.flags" useByScannerDiscovery="false" value="-Wl,-dead_strip,-x,-S,-why_load -undefined dynamic_lookup" valueType="string"/>
+                                								
+                                <option id="macosx.cpp.link.option.strip.2046583613" name="Omit all symbol information (-s)" superClass="macosx.cpp.link.option.strip" useByScannerDiscovery="false" value="false" valueType="boolean"/>
                                 								
                                 <inputType id="cdt.managedbuild.tool.macosx.cpp.linker.input.953290087" superClass="cdt.managedbuild.tool.macosx.cpp.linker.input">
                                     									
@@ -287,7 +303,7 @@
                                     								
                                 </inputType>
                                 								
-                                <outputType id="cdt.managedbuild.tool.macosx.cpp.linker.macosx.so.release.output.1956062476" outputPrefix="xenomat-" superClass="cdt.managedbuild.tool.macosx.cpp.linker.macosx.so.release.output"/>
+                                <outputType id="cdt.managedbuild.tool.macosx.cpp.linker.macosx.so.release.output.1956062476" outputPrefix="xeno-" superClass="cdt.managedbuild.tool.macosx.cpp.linker.macosx.so.release.output"/>
                                 							
                             </tool>
                             							
@@ -321,7 +337,9 @@
                                     								
                                 </option>
                                 								
-                                <option id="gnu.cpp.compiler.option.other.other.361166471" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" useByScannerDiscovery="false" value="-c -fmessage-length=0" valueType="string"/>
+                                <option id="gnu.cpp.compiler.option.other.other.361166471" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" useByScannerDiscovery="false" value="-c -ffunction-sections -fdata-sections -fvisibility=hidden -fmessage-length=0" valueType="string"/>
+                                								
+                                <option id="gnu.cpp.compiler.option.other.pic.897820516" name="Position Independent Code (-fPIC)" superClass="gnu.cpp.compiler.option.other.pic" useByScannerDiscovery="false" value="true" valueType="boolean"/>
                                 								
                                 <inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1842507958" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
                                 							
@@ -435,12 +453,6 @@
         		
         <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
         		
-        <scannerConfigBuildInfo instanceId="cdt.managedbuild.config.macosx.so.release.2023311598;cdt.managedbuild.config.macosx.so.release.2023311598.;cdt.managedbuild.tool.gnu.c.compiler.macosx.so.release.690937241;cdt.managedbuild.tool.gnu.c.compiler.input.1580793301">
-            			
-            <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
-            		
-        </scannerConfigBuildInfo>
-        		
         <scannerConfigBuildInfo instanceId="cdt.managedbuild.config.macosx.so.debug.1888949587;cdt.managedbuild.config.macosx.so.debug.1888949587.;cdt.managedbuild.tool.gnu.cpp.compiler.macosx.so.debug.1620817831;cdt.managedbuild.tool.gnu.cpp.compiler.input.1421205198">
             			
             <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
@@ -454,6 +466,12 @@
         </scannerConfigBuildInfo>
         		
         <scannerConfigBuildInfo instanceId="cdt.managedbuild.config.macosx.so.debug.1888949587;cdt.managedbuild.config.macosx.so.debug.1888949587.;cdt.managedbuild.tool.gnu.c.compiler.macosx.so.debug.1637205380;cdt.managedbuild.tool.gnu.c.compiler.input.1386646708">
+            			
+            <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+            		
+        </scannerConfigBuildInfo>
+        		
+        <scannerConfigBuildInfo instanceId="cdt.managedbuild.config.macosx.so.release.2023311598;cdt.managedbuild.config.macosx.so.release.2023311598.;cdt.managedbuild.tool.gnu.c.compiler.macosx.so.release.690937241;cdt.managedbuild.tool.gnu.c.compiler.input.1580793301">
             			
             <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
             		
