--- a/.cproject
+++ b/.cproject
@@ -5,7 +5,7 @@
         		
         <cconfiguration id="cdt.managedbuild.config.macosx.so.debug.1888949587">
             			
-            <storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="cdt.managedbuild.config.macosx.so.debug.1888949587" moduleId="org.eclipse.cdt.core.settings" name="Debug">
+            <storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="cdt.managedbuild.config.macosx.so.debug.1888949587" moduleId="org.eclipse.cdt.core.settings" name="MacDebug">
                 				
                 <externalSettings>
                     					
@@ -45,7 +45,7 @@
             			
             <storageModule moduleId="cdtBuildSystem" version="4.0.0">
                 				
-                <configuration artifactExtension="so" artifactName="examples" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.sharedLib" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.sharedLib,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug" cleanCommand="rm -rf" description="" id="cdt.managedbuild.config.macosx.so.debug.1888949587" name="Debug" parent="cdt.managedbuild.config.macosx.so.debug">
+                <configuration artifactExtension="so" artifactName="examples" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.sharedLib" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.sharedLib,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug" cleanCommand="rm -rf" description="Debug build for MacOSX GCC" id="cdt.managedbuild.config.macosx.so.debug.1888949587" name="MacDebug" parent="cdt.managedbuild.config.macosx.so.debug">
                     					
                     <folderInfo id="cdt.managedbuild.config.macosx.so.debug.1888949587." name="/" resourcePath="">
                         						
@@ -87,7 +87,7 @@
                                 								
                                 <option id="macosx.cpp.link.option.flags.1936858044" name="Linker flags" superClass="macosx.cpp.link.option.flags" useByScannerDiscovery="false" value="-Wl,-dead_strip,-x,-S,-why_load -undefined dynamic_lookup" valueType="string"/>
                                 								
-                                <option id="macosx.cpp.link.option.strip.383274195" superClass="macosx.cpp.link.option.strip" value="false" valueType="boolean"/>
+                                <option id="macosx.cpp.link.option.strip.383274195" name="Omit all symbol information (-s)" superClass="macosx.cpp.link.option.strip" value="false" valueType="boolean"/>
                                 								
                                 <inputType id="cdt.managedbuild.tool.macosx.cpp.linker.input.1696561658" superClass="cdt.managedbuild.tool.macosx.cpp.linker.input">
                                     									
@@ -213,7 +213,7 @@
         		
         <cconfiguration id="cdt.managedbuild.config.macosx.so.release.2023311598">
             			
-            <storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="cdt.managedbuild.config.macosx.so.release.2023311598" moduleId="org.eclipse.cdt.core.settings" name="Release">
+            <storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="cdt.managedbuild.config.macosx.so.release.2023311598" moduleId="org.eclipse.cdt.core.settings" name="MacRelease">
                 				
                 <externalSettings>
                     					
@@ -253,7 +253,7 @@
             			
             <storageModule moduleId="cdtBuildSystem" version="4.0.0">
                 				
-                <configuration artifactExtension="so" artifactName="examples" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.sharedLib" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.sharedLib,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release" cleanCommand="rm -rf" description="" id="cdt.managedbuild.config.macosx.so.release.2023311598" name="Release" parent="cdt.managedbuild.config.macosx.so.release">
+                <configuration artifactExtension="so" artifactName="examples" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.sharedLib" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.sharedLib,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release" cleanCommand="rm -rf" description="Release build for MacOSX GCC" id="cdt.managedbuild.config.macosx.so.release.2023311598" name="MacRelease" parent="cdt.managedbuild.config.macosx.so.release">
                     					
                     <folderInfo id="cdt.managedbuild.config.macosx.so.release.2023311598." name="/" resourcePath="">
                         						
@@ -331,9 +331,9 @@
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.preprocessor.def.1215864985" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" useByScannerDiscovery="false" valueType="definedSymbols">
                                     									
-                                    <listOptionValue builtIn="false" value="XENO_DARWIN"/>
-                                    									
                                     <listOptionValue builtIn="false" value="NDEBUG"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="XENO_DARWIN"/>
                                     								
                                 </option>
                                 								
@@ -426,6 +426,12 @@
     <storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
     	
     <storageModule moduleId="refreshScope" versionNumber="2">
+        		
+        <configuration configurationName="MacDebug">
+            			
+            <resource resourceType="PROJECT" workspacePath="/xenomat"/>
+            		
+        </configuration>
         		
         <configuration configurationName="Debug">
             			
